--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !.github
 php_errorlog
 .log
+.vscode
 
 # do not ignore gitpod files
 !.gitpod.Dockerfile
@@ -55,6 +56,7 @@ Thumbs.db
 
 # ignore node/grunt dependency directories
 node_modules/
+src/nodeapi/node_modules/
 
 # webpack output
 dist/*
