--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-gradient-progress": "^1.0.3",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.3.0",
 		"yup": "^0.32.11"
